# docs/swagger.json
@@ -360,6 +360,50 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "security": [
+                    {
+                        "AccessToken": []
+                    }
+                ],
+                "description": "Create User",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "Post Create User based on parameter",
+                "operationId": "post-create-user",
+                "parameters": [
+                    {
+                        "description": "Data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.CreateUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.BaseResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.BaseResponse"
+                        }
+                    }
+                }
             }
         },
         "/user/{id}": {
@@ -447,6 +491,39 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "request.CreateUserRequest": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string",
+                    "example": "Paijo Royo Royo"
+                },
+                "password": {
+                    "type": "string",
+                    "example": "password"
+                },
+                "role": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/sql.UserRole"
+                        }
+                    ],
+                    "example": "karyawan"
+                },
+                "status": {
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/sql.UserStatus"
+                        }
+                    ],
+                    "example": "active"
+                },
+                "username": {
+                    "type": "string",
+                    "example": "paijo"
                 }
             }
         },
