# internal/router.go
@@ -45,5 +45,6 @@ func (r *router) HistoryRoute(handler handler.HistoryHandler) {
 func (r *router) UserRoute(handler handler.UserHandler) {
 	user := r.app.Group("user")
 	user.Get("", r.mid.Auth(false), r.mid.Role(sql.UserRoleAdmin, false), handler.AllUser)
+	user.Post("", r.mid.Auth(false), r.mid.Role(sql.UserRoleAdmin, false), handler.CreateUser)
 	user.Get(":id", r.mid.Auth(false), r.mid.Role(sql.UserRoleAdmin, false), handler.UserById)
 }
